# near_zk_demo1

./: .gitignore  makefile  package-lock.json  package.json  readme.md
circuits/: Makefile  recover.circom  recover_input.json  tree.circom  update.circom  update_input.json
contracts/near_zk_demo1/: Cargo.toml
contracts/near_zk_demo1/src/: lib.rs  merkle_tree.rs  poseidon.rs  proof.rs  utils.rs  verification_key.rs
contracts/near_zk_demo1/tests/: test_scene.rs
contracts/near_zk_demo1/tests/common/: contract_near_zk_demo1.rs  mod.rs  setup.rs
contracts/near_zk_demo1/tests/data/: recover_proof0.json  recover_proof1.json  recover_proof2.json  recover_public0.json  recover_public1.json  recover_public2.json  update_proof.json  update_public.json
