[package]
name = "near_zk_demo1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "=0.9.0", default-features = false }

near-sdk = "4.0.0"
near-contract-standards = "=4.0.0"

serde-json-wasm = { version = "0.5.0" }

ark-groth16 = { version = "0.3.0", default-features = false }
ark-bn254 = { version = "0.3.0", default-features = false, features = ["curve"] }
ark-ff = { version = "0.3.0", default-features = false, features = ["parallel", "asm"] }

getrandom = {version = "0.2", default-features = false, features = ["custom"]}

[dev-dependencies]
near-units = "0.2.0"
workspaces = "0.3"

anyhow = "1.0"
tokio = { version = "1.10.0", features = ["full"] }
